default/objects/E2E_Chat_Setup__c/E2E_Chat_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Chat Setup</label>
</CustomObject>