default/objects/E2E_Chat_Setup__c/fields/chatButtonId__c.field-meta.xml
<CustomField>
    <fullName>chatButtonId__c</fullName>
    <label>chatButtonId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>