default/objects/E2E_Chat_Setup__c/fields/chatDeploymentId__c.field-meta.xml
<CustomField>
    <fullName>chatDeploymentId__c</fullName>
    <label>chatDeploymentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>