default/objects/E2E_Chat_Setup__c/fields/chatURL__c.field-meta.xml
<CustomField>
    <fullName>chatURL__c</fullName>
    <label>chatURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>