default/objects/E2E_Chat_Setup__c/fields/DeploymentJS__c.field-meta.xml
<CustomField>
    <fullName>DeploymentJS__c</fullName>
    <description>Example: /resource/1523863578000/e2eLiveAgentDeployment</description>
    <label>DeploymentJS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>